<resources>
    <string name="app_name">Pocket Store</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="tv_fallo">Error...</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesión</string>


    <string name="menu_objetos">Objetos</string>
    <string name="menu_agregar_objetos">Agregar Objetos</string>
    <string name="menu_fragment_update">Actualizar Objeto</string>


    <string name="msg_nombre">Nombre del objeto</string>
    <string name="msg_nombre_project">Nombre del proyecto</string>
    <string name="msg_cliente_project">Nombre del cliente</string>
    <string name="msg_add_project">Agregar proyecto</string>
    <string name="msg_precio">Precio</string>
    <string name="msg_correo">eMail (tienda@xxxx.xxx)</string>
    <string name="msg_telefono">Teléfono (9999-9999)</string>
    <string name="msg_web">Sitio WEB</string>
    <string name="msg_add_lugar">Agregar Objeto</string>
    <string name="bt_uptate_lugar">Actualizar Objeto</string>
    <string name="bt_share_object">Compartir este Objeto</string>
    <string name="msg_share_friend">Correo para compartir</string>
    <string name="msg_share_friend_error_data">Debes agregar el correo</string>
    <string name="title_share_object">Compartir Objeto</string>
    <string name="title_shared_object">Objeto Compartido</string>
    <string name="title_add_object_to_project">Agregar objecto al proyecto</string>
    <string name="title_urs_project">Tus Proyectos</string>
    <string name="title_add_project">Agregar proyecto</string>
    <string name="title_update_project">Actualizar proyecto</string>
    <string name="title_shared_objects">Objetos compartidos</string>
    <string name="msg_share_friend_error_not_registered">Correo ingresado no existe</string>
    <string name="msg_shared_friend">Objecto compartido…</string>
    <string name="msg_lugar_added">Objeto Agregado…</string>
    <string name="msg_project_added">Proyecto Agregado…</string>
    <string name="msg_delete_objeto">Eliminar Objeto…</string>
    <string name="msg_delete_project">Eliminar Projecto…</string>
    <string name="msg_object_updated">Objeto Actualizado…</string>
    <string name="msg_project_updated">Proyecto Actualizado…</string>
    <string name="msg_project_object_confirm">Confirmar asignación…</string>
    <string name="msg_object_deleted">Objeto Eliminado…</string>
    <string name="msg_project_deleted">Proyecto Eliminado…</string>
    <string name="msg_nombre_project_">Nombre del proyecto</string>
    <string name="msg_data">Faltan Datos!</string>
    <string name="msg_seguro_borrado">¿Está seguro de eliminar el Objeto :</string>
    <string name="msg_seguro_borrado_from_project">¿Está seguro de eliminar el objeto </string>
    <string name="msg_seguro_borrado_project">¿Está seguro de eliminar el Projecto :</string>
    <string name="msg_si">Si</string>
    <string name="msg_no">No</string>
    <string name="msg_menu_projects_objects">Objetos por proyectos</string>
    <string name="msg_menu_projects">Tus proyectos</string>
    <string name="msg_project_client">Nombre del cliente</string>
    <string name="msg_project_update">Actualizar proyecto</string>
    <string name="msg_project_object">Confirmar asignacion de objeto al proyecto…</string>
    <string name="msg_project_object_confirm_button">Confirmar asignación</string>
    <string name="msg_project_object_confirm_project">Proyecto a asignar:</string>
    <string name="msg_project_object_confirm_object">Objecto por asignar:</string>
    <string name="msg_project_object_confirm_success">Objecto asignado!</string>
    <string name="msg_fragment_view_objects_project">Listado de objetos</string>
    <string name="msg_fragment_view_objects_project_title">Listado de objetos por proyecto :</string>

    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_map_view">Ver objeto en mapa</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="msg_datos">Faltan datos</string>
    <string name="error">Error</string>

    <string name="msgEscucharAudio">Escuchar nota de audio</string>
    <string name="msg_imagen">Imagen del lugar</string>
    <string name="graba_pausa">Graba o pausa grabación</string>
    <string name="escuchaPlay">Escucha grabación</string>
    <string name="delete_nota">Borra nota de audio</string>
    <string name="play_nota">Escuchar nota de audio</string>
    <string name="rec_stop_nota">Graba o detiene nota de audio</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="rotar_l">Rotar a la izquierda</string>
    <string name="rotale_r">Rota a la derecha</string>
    <string name="msg_graba_audio">Grabando nota de audio</string>
    <string name="msg_detener_audio">Nota de audio detenida</string>
    <string name="msg_subiendo_audio">Subiendo Nota Audio</string>
    <string name="msg_subiendo_imagen">Subiendo imagen</string>
    <string name="subiendo_objeto">Subiendo objeto</string>
    <string name="subiendo_proyecto">Subiendo proyecto</string>
    <string name="requiere_whatss_instalado">Primero debes instalar WhatsApp</string>
    <string name="requiere_wase_instalado">Primero debes instalar Wase</string>
    <string name="todo">Pendiente</string>
    <string name="wase_ir">waze://?ll=%1$s,%2$s&amp;navigate=yes</string>
    <string name="wase_descargar">market://details?id=com.waze</string>

    <string name="menu_objets">Objetos</string>

    <string name="id_cliente_web">733701149321-c08s2os7nin3lf4ocmrgkrsvi4mh89l6.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>