<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg02"
    tools:context=".activities.ui.projects.UpdateProjectFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_nombre_project_"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/msg_nombre_project_"
            android:textColor="@android:color/white"
            android:textColorHint="@color/editTextBg"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/et_nombre_cliente_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/editTextBg"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/msg_project_client"
            android:inputType="textPersonName" />



        <Button
            android:id="@+id/bt_update_objeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_project_update" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_latitud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_longitud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_altura"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/bt_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/msg_map_view"
                android:src="@drawable/ic_location"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/bt_wase"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:src="@drawable/waze"
                tools:ignore="ImageContrastCheck" />
            <ImageButton
                android:id="@+id/btPlay"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/msgEscucharAudio"
                android:src="@drawable/ic_play" />

        </LinearLayout>
        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/msg_imagen"
            android:scaleType="centerInside"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/backgrounds/scenic" />
    </LinearLayout>

</ScrollView>