<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg02"
    android:stretchColumns="*"
    tools:context=".activities.ui.projectObjects.ConfirmProjectObjectFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tv_mensage_confirmacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/msg_project_object"
        android:textSize="22sp"
        android:layout_marginLeft="15dp"
        android:textAlignment="center"
        android:layout_marginBottom="24dp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_mensage_confirmacion_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/msg_project_object_confirm_project"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/vista_fila_project"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="#264D99"
        android:backgroundTint="#264D99"
        android:layout_margin="10dp"
        app:cardCornerRadius="25dp"
        android:clickable="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/tv_nombre_project"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imagen_project"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nombre_project"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tv_cliente_project"
                android:layout_width="78dp"
                android:layout_height="29dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="TextView"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imagen_project"
                app:layout_constraintTop_toBottomOf="@+id/tv_nombre_project" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_mensage_confirmacion_object"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/msg_project_object_confirm_object"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/vista_fila"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="#264D99"
        android:backgroundTint="#264D99"
        android:layout_margin="10dp"
        app:cardCornerRadius="25dp"
        android:clickable="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/tv_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tv_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="TextView"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imagen"
                app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />

            <TextView
                android:id="@+id/tv_correo_lugar_fila"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="TextView"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_telefono"
                app:layout_constraintTop_toBottomOf="@+id/tv_telefono" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/bt_confirm_obbject_to_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="25sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10sp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/msg_project_object_confirm_button" />
    </LinearLayout>
</ScrollView>